# Modello_SIR

./: .gitignore  README.md  lvl1.cpp  lvl2.cpp  lvl2SFML.cpp  lvl2Trend.cpp  lvl2fix.cpp  lvl2taxxopaxxo.cpp  lvl2tot.cpp  lvl3.cpp  tasso2-1.cpp  tasso2.cpp  tasso_death.cpp  tassolvl1.cpp
SIR/: CMakeLists.txt  board.cpp  board.test.cpp  display.cpp  main.cpp  points.test.cpp
SIR/source/: board.cpp  board.hpp  display.cpp  display.hpp  graph.cpp  graph.hpp  info.cpp  info.hpp  main.cpp  points.cpp  points.hpp
SIR/test/: board.test.cpp  points.test.cpp
completo/: CMakeLists.txt  completo.cpp
level2/: CMakeLists.txt  board.cpp  board.hpp  board.test.cpp  board.tests.cpp  display.cpp  display.hpp  graph.cpp  graph.hpp  info.cpp  info.hpp  main.cpp  points.cpp  points.hpp  points.test.cpp
level2_mod/: CMakeLists.txt  board_mod.cpp  board_mod.hpp  display_mod.cpp  display_mod.hpp  graph_mod.cpp  graph_mod.hpp  main_mod.cpp  points_mod.cpp  points_mod.hpp
lvl2_project/: CMakeLists.txt  board.hpp  display.hpp  graph.hpp  main.cpp  points.hpp
